metadata/objects/Route_Maps__c.object
<CustomObject>
    <description>Trip details captured for the view, start and stop of the any route</description>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Number of days for trip- needs to be converted to Days hours and minutes</description>
        <formula>End_Date_Time__c -  Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_of_Trip__c</fullName>
        <formula>IF (  Duration__c  &gt; 0,
TEXT(FLOOR(  Duration__c  )) &amp; &quot; days &quot; &amp;
TEXT( FLOOR( 24 * (  Duration__c  - FLOOR(  Duration__c  ) ))) &amp; &quot; hours&quot; &amp;
TEXT( ROUND(60 * (ROUND( 24 * (  Duration__c  - FLOOR(  Duration__c  ) ),8) - FLOOR(
ROUND( 24 * (  Duration__c  - FLOOR(  Duration__c  ) ),8)) ),0)) &amp; &quot; min &quot;
, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration of Trip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elevation__c</fullName>
        <description>Automated elevation at time of Trip.</description>
        <label>Elevation</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favorite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Listed as a user favorite</description>
        <label>Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Speed_Limit__c</fullName>
        <description>Max speed limit on this trip allowed by law</description>
        <label>Legal Speed Limit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Sub_type__c</fullName>
        <label>Report Sub type</label>
        <picklist>
            <controllingField>Report__c</controllingField>
            <picklistValues>
                <fullName>Light</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harsh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pothole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smooth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <label>Report</label>
        <picklist>
            <picklistValues>
                <fullName>Traffic Jam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hazard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rider__c</fullName>
        <description>Which rider/user took this trip?</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Route Maps</relationshipLabel>
        <relationshipName>Trip_Segments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Point__c</fullName>
        <label>Start Point</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicles__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup object to Vehicle</description>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Route Maps</relationshipLabel>
        <relationshipName>Route_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weather_Condition__c</fullName>
        <label>Weather Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Sunny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloudy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIRE!!!</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Where_Am_I__c</fullName>
        <description>How many decimals.</description>
        <label>Where Am I?</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <label>Route Map</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Route Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>